<resources>
    <string name="app_name">CalMate</string>
    <string name="welcome">Welcome!</string>
    <string name="calmate">CalMate</string>
    <string name="your_path_to_wellness">“Your path to wellness”</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password...</string>
    <string name="name">Name</string>
    <string name="enter_your_fullname">enter your fullname</string>
    <string name="confirm_password">confirm password</string>
    <string name="member_status">Member Status:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="age">Age:</string>
    <string name="profile_name">Name:</string>
    <string name="profile_image_dec">Profile Image</string>
    <string name="profile">Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="navigate_back">Navigate back</string>
    <string name="calorie_intake_calculator">Calorie Intake Calculator</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="male_icon">male_icon</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="female_icon">female_icon</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="years">Years</string>
    <string name="how_much_do_you_weight">How much do you weight?</string>
    <string name="active">Active</string>
    <string name="lightly_active">Lightly Active</string>
    <string name="how_active_are_you_daily_basis">How active are you daily basis?</string>
    <string name="very_active">Very Active</string>
    <string name="done">DONE</string>
    <string name="kg">Kg</string>
    <string name="cm">CM</string>
    <string name="greeting">Hello %1$s!</string>
    <string name="hello">Hello!</string>
    <string name="calories_format">%1$d/%2$d Cal</string>
    <string name="protein">Protein</string>
    <string name="burger">burger</string>
    <string name="today">Today</string>
    <string name="junk_food">junk_food</string>
    <string name="macronutrient_format">%1$d/%2$d g</string>
    <string name="food_menu">Food Menu</string>
    <string name="breakfast">Breakfast</string>
    <string name="box">box</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="menu">Menu</string>
    <string name="low_calories">Low Calories</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="mid_calories">Mid Calories</string>
    <string name="apple">apple</string>
    <string name="watermelon">watermelon</string>
    <string name="burned_calories">Burned Calories</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="running_heart">running heart</string>
    <string name="basic_plan_free">Basic Plan (Free)</string>
    <string name="features_like_calorie_tracking_and_food_logging">- Features like calorie tracking and food logging</string>
    <string name="premium_plan_monthly">Premium Plan (Monthly)</string>
    <string name="_5_99">€ 5.99</string>
    <string name="full_access_to_all_features">- Full access to all features</string>
    <string name="ad_free_experience">- Ad-free experience</string>
    <string name="overeaten_format">&#160;&#160;&#160;&#160;%1$d\nOvereaten</string>
    <string name="remaining_format">&#160;&#160;&#160;&#160;%1$d\nRemaining</string>
</resources>