<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lunch">

    <ImageView
        android:id="@+id/nav_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/navigate_back"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LunchTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overlock"
        android:text="@string/lunch"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <ImageView
        android:id="@+id/lunch_image"
        android:layout_width="309dp"
        android:layout_height="111dp"
        android:layout_marginStart="116dp"
        android:contentDescription="@string/lunch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/lunche" />

    <ImageView
        android:id="@+id/snack_image"
        android:layout_width="393dp"
        android:layout_height="232dp"
        android:layout_marginEnd="216dp"
        android:contentDescription="@string/snacks"
        android:rotation="-31.16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        app:srcCompat="@drawable/snack" />

    <ImageView
        android:id="@+id/apple_image"
        android:layout_width="240dp"
        android:layout_height="158dp"
        android:layout_marginTop="676dp"
        android:layout_marginEnd="280dp"
        android:contentDescription="@string/apple"
        android:rotation="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/watermelon_image"
        android:layout_width="223dp"
        android:layout_height="112dp"
        android:layout_marginStart="284dp"
        android:contentDescription="@string/watermelon"
        android:rotation="-31.16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707"
        app:srcCompat="@drawable/watermelon" />

    <ImageView
        android:id="@+id/junkfood_image"
        android:layout_width="213dp"
        android:layout_height="101dp"
        android:layout_marginStart="300dp"
        android:contentDescription="@string/junk_food"
        android:rotation="-31.16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223"
        app:srcCompat="@drawable/junkfood" />

    <ImageView
        android:id="@+id/lowcaloreis_btn"
        android:layout_width="371dp"
        android:layout_height="123dp"
        android:contentDescription="@string/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/btn_bg" />


    <TextView
        android:id="@+id/lowcaloriestext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overlock"
        android:text="@string/low_calories"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <ImageView
        android:id="@+id/highcalories_btn"
        android:layout_width="371dp"
        android:layout_height="123dp"
        android:contentDescription="@string/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        app:srcCompat="@drawable/btn_bg" />

    <TextView
        android:id="@+id/highcaloriestext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overlock"
        android:text="High Calories"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <ImageView
        android:id="@+id/midcalories_btn"
        android:layout_width="371dp"
        android:layout_height="123dp"
        android:contentDescription="@string/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598"
        app:srcCompat="@drawable/btn_bg" />

    <TextView
        android:id="@+id/midaloriestext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overlock"
        android:text="@string/mid_calories"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />


</androidx.constraintlayout.widget.ConstraintLayout>